# scylladb-cloud-client

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
src/scylladb_cloud_client/: __init__.py  __main__.py  cli.py  client.py  curated.py  generate.py  operations.py
tests/: test_cli.py  test_client.py  test_packaging.py
